<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/on_boarding_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/sfpro_display_bold"
        android:text="@string/on_boarding_title"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/on_boarding_bell_img"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_bell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/on_boarding_title_txt" />

    <TextView
        android:id="@+id/on_boarding_bell_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sfpro_display_bold"
        android:text="@string/on_boarding_subscribe_notification"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/on_boarding_bell_img"
        app:layout_constraintTop_toTopOf="@+id/on_boarding_bell_img" />

    <TextView
        android:id="@+id/on_boarding_bell_content_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/sfpro_display_regular"
        android:text="@string/on_boarding_notification_explain"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/on_boarding_bell_title_txt"
        app:layout_constraintTop_toBottomOf="@+id/on_boarding_bell_title_txt" />

    <ImageView
        android:id="@+id/on_boarding_mega_phone_img"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/ic_mega_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/on_boarding_bell_img" />

    <TextView
        android:id="@+id/on_boarding_mega_phone_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sfpro_display_bold"
        android:text="@string/on_boarding_one_touch"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/on_boarding_mega_phone_img"
        app:layout_constraintTop_toTopOf="@+id/on_boarding_mega_phone_img" />

    <TextView
        android:id="@+id/on_boarding_mega_phone_content_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/sfpro_display_regular"
        android:text="@string/on_boarding_mega_phone_explain"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/on_boarding_mega_phone_title_txt"
        app:layout_constraintTop_toBottomOf="@+id/on_boarding_mega_phone_title_txt" />

    <ImageView
        android:id="@+id/on_boarding_search_img"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/ic_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/on_boarding_mega_phone_img"
        app:tint="@color/kus_blue" />

    <TextView
        android:id="@+id/on_boarding_search_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sfpro_display_bold"
        android:text="@string/on_boarding_quick_search"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/on_boarding_search_img"
        app:layout_constraintTop_toTopOf="@+id/on_boarding_search_img" />

    <TextView
        android:id="@+id/on_boarding_search_content_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/sfpro_display_regular"
        android:text="@string/on_boarding_search_explain"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/on_boarding_search_title_txt"
        app:layout_constraintTop_toBottomOf="@+id/on_boarding_search_title_txt" />

    <Button
        android:id="@+id/on_boarding_subscribe_noti_btn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_primary_gradation"
        android:fontFamily="@font/sfpro_display_regular"
        android:gravity="center"
        android:text="@string/on_boarding_subscribe_notice"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>