<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ku_stacks.ku_ring.ui.notice_storage.NoticeStorageViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/kus_background">

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@null"
            android:padding="4dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/notice_storage_back_button_description"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/kus_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/notosanskr_medium"
            android:text="@string/notice_storage_title"
            android:textColor="@color/kus_primary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/back_image"
            app:layout_constraintStart_toEndOf="@+id/back_image"
            app:layout_constraintTop_toTopOf="@+id/back_image" />

        <ImageView
            android:id="@+id/clear_notices_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@null"
            android:padding="4dp"
            android:contentDescription="@string/notice_storage_clear_button_description"
            android:src="@drawable/ic_trash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/kus_pink" />

        <TextView
            android:id="@+id/notification_storage_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/sfpro_display_medium"
            android:text="@string/notice_storage_alert"
            visibleIf="@{ viewModel.savedNotices.isEmpty() }"
            android:textColor="@color/kus_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_image" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notification_storage_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>