<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/subscribe_notice_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/notosanskr_regular"
        android:text="@string/setting_subscription_notice"
        android:textColor="@color/kus_gray"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subscribe_notice_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="?attr/selectableItemBackground"
        android:minHeight="45dp"
        app:layout_constraintTop_toBottomOf="@+id/subscribe_notice_label">

        <ImageView
            android:id="@+id/subscribe_notice_img"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_ring"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/kus_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/sfpro_display_regular"
            android:text="@string/setting_subscribe_notice"
            android:textColor="@color/kus_primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/subscribe_notice_img"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:padding="4dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/kus_secondary_gray" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subscribe_ext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/subscribe_notice_layout">

        <ImageView
            android:id="@+id/subscribe_ext_img"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:src="@drawable/ic_ring"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/kus_primary" />

        <TextView
            android:id="@+id/subscribe_ext_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/sfpro_display_regular"
            android:text="@string/setting_subscribe_ext"
            android:textColor="@color/kus_primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/subscribe_ext_img"
            app:layout_constraintStart_toEndOf="@+id/subscribe_ext_img"
            app:layout_constraintTop_toTopOf="@+id/subscribe_ext_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/setting_subscribe_ext_description"
            android:textColor="@color/kus_gray"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/subscribe_ext_label"
            app:layout_constraintTop_toBottomOf="@+id/subscribe_ext_label" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/subscribe_ext_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="21dp"
            android:thumb="@drawable/switch_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/subscribe_ext_label"
            app:track="@drawable/switch_track_selector" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>