<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@null"
            android:padding="4dp"
            android:src="@drawable/ic_back"
            app:tint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/notosanskr_medium"
            android:text="@string/notification_my"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/back_img"
            app:layout_constraintStart_toEndOf="@+id/back_img"
            app:layout_constraintTop_toTopOf="@+id/back_img" />

        <ImageView
            android:id="@+id/delete_img"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@null"
            android:padding="4dp"
            android:src="@drawable/ic_trash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/notification_alert_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_display_medium"
            android:gravity="center"
            android:text="@string/notification_alert"
            android:textColor="@color/kus_dark_gray"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notification_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/notification_set_noti_btn"
            app:layout_constraintTop_toBottomOf="@+id/back_img"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/notification_set_noti_btn"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_primary_gradation"
            android:fontFamily="@font/sfpro_display_regular"
            android:gravity="center"
            android:text="@string/notification_setting"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>