<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/kus_gray_line"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sns_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/notosanskr_regular"
        android:text="@string/sns"
        android:textColor="@color/kus_gray"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instagram_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="?attr/selectableItemBackground"
        android:minHeight="45dp"
        app:layout_constraintTop_toBottomOf="@+id/sns_label">

        <ImageView
            android:id="@+id/new_contents_img"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_point_out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/kus_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/sfpro_display_regular"
            android:text="@string/instagram"
            android:textColor="@color/kus_primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_contents_img"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:padding="4dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/kus_secondary_gray" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/kakao_channel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:minHeight="45dp"
        app:layout_constraintTop_toBottomOf="@+id/instagram_layout">

        <ImageView
            android:id="@+id/kakao_channel_img"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_point_out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/kus_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/sfpro_display_regular"
            android:text="@string/kakao_channel"
            android:textColor="@color/kus_primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/kakao_channel_img"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:padding="4dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/kus_secondary_gray" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>